Custom--app/main/default/objects/User/fields/AZB_User_Id__c.field-meta.xml
<CustomField>
    <fullName>AZB_User_Id__c</fullName>
    <description>This field links an Invitation Homes salesforce user with their AZ Bidder account</description>
    <inlineHelpText>Please insert your AZ Bidder Id exactly as you log in with it to the AZ Bidder site.</inlineHelpText>
    <label>AZ Bidder User Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>