Custom--app/main/default/objects/User/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <formula>Contact.Account.Name</formula>
    <label>Brokerage</label>
    <type>Text</type>
</CustomField>