Custom--app/main/default/objects/User/fields/Cell_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Cell_Carrier__c</fullName>
    <inlineHelpText>Please select the user's mobile phone carrier</inlineHelpText>
    <label>Cell Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alltel</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
            </value>
            <value>
                <fullName>Metro PCS</fullName>
            </value>
            <value>
                <fullName>Nextel</fullName>
            </value>
            <value>
                <fullName>Sprint PCS</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>US Cellular</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Virgin Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>