Custom--app/main/default/objects/User/fields/Formula_Region__c.field-meta.xml
<CustomField>
    <fullName>Formula_Region__c</fullName>
    <formula>TEXT(Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Region</label>
    <type>Text</type>
</CustomField>