Custom--app/main/default/objects/User/fields/Frozen__c.field-meta.xml
<CustomField>
    <fullName>Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When you freeze someone, please check this box.  There's no other way to identify frozen users.</inlineHelpText>
    <label>Frozen</label>
    <type>Checkbox</type>
</CustomField>