Custom--app/main/default/objects/User/fields/Is_Regional_Queue_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Regional_Queue_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the My Region's Regional Queue Member field on Concierge.  This is used to enable the logged-in Regional Controller to see tickets only for his or her region.</description>
    <inlineHelpText>This field is used in the My Region's Regional Queue Member field on Concierge.  This is used to enable the logged-in Regional Controller to see tickets only for his or her region.</inlineHelpText>
    <label>Is Regional Queue Member</label>
    <type>Checkbox</type>
</CustomField>