Custom--app/main/default/objects/User/fields/Is_VIP__c.field-meta.xml
<CustomField>
    <fullName>Is_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is being used to identify the VIP users</description>
    <label>Is VIP</label>
    <type>Checkbox</type>
</CustomField>