Custom--app/main/default/objects/User/fields/License_Certification_ID__c.field-meta.xml
<CustomField>
    <fullName>License_Certification_ID__c</fullName>
    <label>License/Certification ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>