Custom--app/main/default/objects/User/fields/Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preference__c</fullName>
    <label>Notification Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>