Custom--app/main/default/objects/User/fields/Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone__c</fullName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>