Custom--app/main/default/objects/User/fields/Owner_Change_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Not_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used in a Validation Rule on Concierge for IT Support employees who are not allowed to change the Owner on records.</inlineHelpText>
    <label>Owner Change Not Allowed</label>
    <type>Checkbox</type>
</CustomField>