Custom--app/main/default/objects/User/fields/Treasury_Request_Queue_Member__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Request_Queue_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify those who can work Treasury Requests in the Concierge queue (currently Dolores Leal and Robert Eagle).  This field is used in a Validation Rule to restrict the editing of Treasury Requests after submission except for those who have this field checked.</description>
    <inlineHelpText>This field is used in a Validation Rule to restrict the editing of Treasury Requests after submission except for those who have this field checked.</inlineHelpText>
    <label>Treasury Request Queue Member</label>
    <type>Checkbox</type>
</CustomField>