Custom--app/main/default/objects/User/fields/VendorID__c.field-meta.xml
<CustomField>
    <fullName>VendorID__c</fullName>
    <label>VendorID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>