Custom--app/main/default/objects/User/fields/VP_of_Operations__c.field-meta.xml
<CustomField>
    <fullName>VP_of_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is referenced in the Concierge field "VP of Operations", which is used in Concierge list views to enable people to see tickets only for their own region.</inlineHelpText>
    <label>VP of Operations</label>
    <type>Checkbox</type>
</CustomField>