Custom--app/main/default/objects/User/fields/ZWS_Id__c.field-meta.xml
<CustomField>
    <fullName>ZWS_Id__c</fullName>
    <label>ZWS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>